# omega-project

./: .gitignore  hyperparameters.json  pyproject.toml
omega/: Omega.py  typing.py
omega/transformer/: Omega.py  __init__.py  attention.py  brain.py  cmd.py  hyperparameters.py  layers.py  mcts.py  reinforcement.py  tokenizer.py  trainers.py  vision.py
omega/transformer/trainers/: __init__.py  grpo.py  rewards.py
tests/omega/transformer/: tokenizer_tests.py
