[project]
name = "omega-project"
version = "0.1.0"
description = "The Final Transformer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.2.0",
    "flash-attn>=2.7.4.post1",
    "ninja>=1.11.1.3",
    "packaging>=24.2",
    "pillow>=11.1.0",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.5",
]

[tool.setuptools]
py-modules = []
